Add singleSlideDisableNav option
Add option so that sliders with a single slide have all navigation disabled instead of cloning the slide and rotating between the copies.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -609,6 +609,7 @@
 						automaticSlide			: false,
 						showControls 			: true,
 						showNavigation			: true,
+						singleSlideNavDisable   : false,
 						showProgressBar			: true,
 						enableSwipe				: true,
 
